include/flow_ffi.h

// Error codes
typedef enum FlowError {
    FLOW_SUCCESS = 0,
    FLOW_ERROR_INVALID_HANDLE = -1,
    FLOW_ERROR_INVALID_ARGUMENT = -2,
    FLOW_ERROR_NODE_NOT_FOUND = -3,
    FLOW_ERROR_PORT_NOT_FOUND = -4,
    FLOW_ERROR_CONNECTION_FAILED = -5,
    FLOW_ERROR_MODULE_LOAD_FAILED = -6,
    FLOW_ERROR_COMPUTATION_FAILED = -7,
    FLOW_ERROR_OUT_OF_MEMORY = -8,
    FLOW_ERROR_TYPE_MISMATCH = -9,
    FLOW_ERROR_NOT_IMPLEMENTED = -10,
    FLOW_ERROR_UNKNOWN = -999
} FlowError;
// Opaque handle types
typedef struct FlowGraph* FlowGraphHandle;
typedef struct FlowNode* FlowNodeHandle;
typedef struct FlowConnection* FlowConnectionHandle;
typedef struct FlowEnv* FlowEnvHandle;
typedef struct FlowNodeFactory* FlowNodeFactoryHandle;
typedef struct FlowNodeData* FlowNodeDataHandle;
// ============================================================================
// Error Handling
// ============================================================================

// Get the last error message
FLOW_FFI_EXPORT const char* flow_get_last_error(void);
// Get the last error code (FlowError enum value, returned as int for a stable C ABI)
FLOW_FFI_EXPORT int flow_get_last_error_code(void);
// Clear the last error
FLOW_FFI_EXPORT void flow_clear_error(void);
// Set custom error message
FLOW_FFI_EXPORT void flow_set_error(FlowError code, const char* message);
// ============================================================================
// Handle Management
// ============================================================================

// Validate if a handle is valid
FLOW_FFI_EXPORT bool flow_is_valid_handle(void* handle);
// Reference counting for handles
FLOW_FFI_EXPORT void flow_retain_handle(void* handle);
FLOW_FFI_EXPORT void flow_release_handle(void* handle);
FLOW_FFI_EXPORT int32_t flow_get_ref_count(void* handle);
// ============================================================================
// Environment Management
// ============================================================================

// Create a new environment with specified thread count
FLOW_FFI_EXPORT FlowEnvHandle flow_env_create(int32_t max_threads);
// Destroy an environment
FLOW_FFI_EXPORT void flow_env_destroy(FlowEnvHandle env);
// Get the node factory from environment
FLOW_FFI_EXPORT FlowNodeFactoryHandle flow_env_get_factory(FlowEnvHandle env);
// Wait for all tasks to complete
FLOW_FFI_EXPORT FlowError flow_env_wait(FlowEnvHandle env);
/**
 * Post a SetInputData call to the env's worker thread pool.
 *
 * The worker takes the node lock and calls SetInputData(port_key, data,
 * compute=true). Returns immediately on the calling thread; the caller may
 * release `data` (FFI handle) the moment this returns — the underlying
 * SharedNode and SharedNodeData are ref-counted into the worker lambda by
 * shared_ptr copy.
 *
 * Mirrors flow-ui's NodeView::on_input pattern. P1 of FLOW_RUN.html §10.11.
 *
 * @return FLOW_SUCCESS on accept; FLOW_ERROR_INVALID_HANDLE on a bad env/
 *         node/data handle; FLOW_ERROR_INVALID_ARGUMENT on null/empty
 *         port_key.
 */
FLOW_FFI_EXPORT FlowError flow_env_add_task_set_input_data(
    FlowEnvHandle      env,
    FlowNodeHandle     node,
    const char*        port_key,
    FlowNodeDataHandle data);
// Get system environment variable
FLOW_FFI_EXPORT const char* flow_env_get_var(FlowEnvHandle env, const char* name);
// ============================================================================
// Graph Management
// ============================================================================

// Create a new graph
FLOW_FFI_EXPORT FlowGraphHandle flow_graph_create(FlowEnvHandle env);
// Destroy a graph
FLOW_FFI_EXPORT void flow_graph_destroy(FlowGraphHandle graph);
// Add a node to the graph
FLOW_FFI_EXPORT FlowNodeHandle flow_graph_add_node(FlowGraphHandle graph, const char* class_id,
                                                   const char* name);
// Remove a node from the graph
FLOW_FFI_EXPORT FlowError flow_graph_remove_node(FlowGraphHandle graph, const char* node_id);
// Get a node by ID
FLOW_FFI_EXPORT FlowNodeHandle flow_graph_get_node(FlowGraphHandle graph, const char* node_id);
// Get all nodes
FLOW_FFI_EXPORT FlowError flow_graph_get_nodes(FlowGraphHandle graph, FlowNodeHandle** nodes,
                                               size_t* count);
// Connect two nodes
FLOW_FFI_EXPORT FlowConnectionHandle flow_graph_connect_nodes(FlowGraphHandle graph,
                                                              const char* source_id,
                                                              const char* source_port,
                                                              const char* target_id,
                                                              const char* target_port);