dart_package/lib/src/ffi/bindings_generated.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for flow_ffi
class FlowCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlowCoreBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlowCoreBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  ffi.Pointer<ffi.Char> flow_get_last_error() {
    return _flow_get_last_error();
  }

  late final _flow_get_last_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'flow_get_last_error');
  late final _flow_get_last_error =
      _flow_get_last_errorPtr.asFunction<ffi.Pointer<ffi.Char> Function()>();

  int flow_get_last_error_code() {
    return _flow_get_last_error_code();
  }

  late final _flow_get_last_error_codePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'flow_get_last_error_code');
  late final _flow_get_last_error_code =
      _flow_get_last_error_codePtr.asFunction<int Function()>();

  void flow_clear_error() {
    return _flow_clear_error();
  }

  late final _flow_clear_errorPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('flow_clear_error');
  late final _flow_clear_error =
      _flow_clear_errorPtr.asFunction<void Function()>();

  void flow_set_error(
    int code,
    ffi.Pointer<ffi.Char> message,
  ) {
    return _flow_set_error(
      code,
      message,
    );
  }

  late final _flow_set_errorPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Int32, ffi.Pointer<ffi.Char>)>>(
      'flow_set_error');
  late final _flow_set_error = _flow_set_errorPtr
      .asFunction<void Function(int, ffi.Pointer<ffi.Char>)>();

  bool flow_is_valid_handle(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _flow_is_valid_handle(
      handle,
    );
  }

  late final _flow_is_valid_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'flow_is_valid_handle');
  late final _flow_is_valid_handle = _flow_is_valid_handlePtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  void flow_retain_handle(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _flow_retain_handle(
      handle,
    );
  }

  late final _flow_retain_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'flow_retain_handle');
  late final _flow_retain_handle =
      _flow_retain_handlePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void flow_release_handle(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _flow_release_handle(
      handle,
    );
  }

  late final _flow_release_handlePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'flow_release_handle');
  late final _flow_release_handle = _flow_release_handlePtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  int flow_get_ref_count(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _flow_get_ref_count(
      handle,
    );
  }

  late final _flow_get_ref_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Void>)>>(
          'flow_get_ref_count');
  late final _flow_get_ref_count =
      _flow_get_ref_countPtr.asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  FlowEnvHandle flow_env_create(
    int max_threads,
  ) {
    return _flow_env_create(
      max_threads,
    );
  }

  late final _flow_env_createPtr =
      _lookup<ffi.NativeFunction<FlowEnvHandle Function(ffi.Int32)>>(
          'flow_env_create');
  late final _flow_env_create =
      _flow_env_createPtr.asFunction<FlowEnvHandle Function(int)>();

  void flow_env_destroy(
    FlowEnvHandle env,
  ) {
    return _flow_env_destroy(
      env,
    );
  }

  late final _flow_env_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FlowEnvHandle)>>(
          'flow_env_destroy');
  late final _flow_env_destroy =
      _flow_env_destroyPtr.asFunction<void Function(FlowEnvHandle)>();

  FlowNodeFactoryHandle flow_env_get_factory(
    FlowEnvHandle env,
  ) {
    return _flow_env_get_factory(
      env,
    );
  }

  late final _flow_env_get_factoryPtr = _lookup<
          ffi.NativeFunction<FlowNodeFactoryHandle Function(FlowEnvHandle)>>(
      'flow_env_get_factory');
  late final _flow_env_get_factory = _flow_env_get_factoryPtr
      .asFunction<FlowNodeFactoryHandle Function(FlowEnvHandle)>();

  int flow_env_wait(
    FlowEnvHandle env,
  ) {
    return _flow_env_wait(
      env,
    );
  }

  late final _flow_env_waitPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(FlowEnvHandle)>>(
          'flow_env_wait');
  late final _flow_env_wait =
      _flow_env_waitPtr.asFunction<int Function(FlowEnvHandle)>();

  /// Post a SetInputData call to the env's worker thread pool.
  ///
  /// The worker takes the node lock and calls SetInputData(port_key, data,
  /// compute=true). Returns immediately on the calling thread; the caller may
  /// release `data` (FFI handle) the moment this returns — the underlying
  /// SharedNode and SharedNodeData are ref-counted into the worker lambda by
  /// shared_ptr copy.
  ///
  /// Mirrors flow-ui's NodeView::on_input pattern. P1 of FLOW_RUN.html §10.11.
  ///
  /// @return FLOW_SUCCESS on accept; FLOW_ERROR_INVALID_HANDLE on a bad env/
  /// node/data handle; FLOW_ERROR_INVALID_ARGUMENT on null/empty
  /// port_key.
  int flow_env_add_task_set_input_data(
    FlowEnvHandle env,
    FlowNodeHandle node,
    ffi.Pointer<ffi.Char> port_key,
    FlowNodeDataHandle data,
  ) {
    return _flow_env_add_task_set_input_data(
      env,
      node,
      port_key,
      data,
    );
  }

  late final _flow_env_add_task_set_input_dataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowEnvHandle,
              FlowNodeHandle,
              ffi.Pointer<ffi.Char>,
              FlowNodeDataHandle)>>('flow_env_add_task_set_input_data');
  late final _flow_env_add_task_set_input_data =
      _flow_env_add_task_set_input_dataPtr.asFunction<
          int Function(FlowEnvHandle, FlowNodeHandle, ffi.Pointer<ffi.Char>,
              FlowNodeDataHandle)>();

  ffi.Pointer<ffi.Char> flow_env_get_var(
    FlowEnvHandle env,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _flow_env_get_var(
      env,
      name,
    );
  }

  late final _flow_env_get_varPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              FlowEnvHandle, ffi.Pointer<ffi.Char>)>>('flow_env_get_var');
  late final _flow_env_get_var = _flow_env_get_varPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(FlowEnvHandle, ffi.Pointer<ffi.Char>)>();

  FlowGraphHandle flow_graph_create(
    FlowEnvHandle env,
  ) {
    return _flow_graph_create(
      env,
    );
  }

  late final _flow_graph_createPtr =
      _lookup<ffi.NativeFunction<FlowGraphHandle Function(FlowEnvHandle)>>(
          'flow_graph_create');
  late final _flow_graph_create = _flow_graph_createPtr
      .asFunction<FlowGraphHandle Function(FlowEnvHandle)>();

  void flow_graph_destroy(
    FlowGraphHandle graph,
  ) {
    return _flow_graph_destroy(
      graph,
    );
  }

  late final _flow_graph_destroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(FlowGraphHandle)>>(
          'flow_graph_destroy');
  late final _flow_graph_destroy =
      _flow_graph_destroyPtr.asFunction<void Function(FlowGraphHandle)>();

  FlowNodeHandle flow_graph_add_node(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> class_id,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _flow_graph_add_node(
      graph,
      class_id,
      name,
    );
  }

  late final _flow_graph_add_nodePtr = _lookup<
      ffi.NativeFunction<
          FlowNodeHandle Function(FlowGraphHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('flow_graph_add_node');
  late final _flow_graph_add_node = _flow_graph_add_nodePtr.asFunction<
      FlowNodeHandle Function(
          FlowGraphHandle, ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  FlowNodeHandle flow_graph_add_node_with_uuid(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> class_id,
    ffi.Pointer<ffi.Char> uuid,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _flow_graph_add_node_with_uuid(
      graph,
      class_id,
      uuid,
      name,
    );
  }

  late final _flow_graph_add_node_with_uuidPtr = _lookup<
      ffi.NativeFunction<
          FlowNodeHandle Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('flow_graph_add_node_with_uuid');
  late final _flow_graph_add_node_with_uuid =
      _flow_graph_add_node_with_uuidPtr.asFunction<
          FlowNodeHandle Function(FlowGraphHandle, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  int flow_graph_remove_node(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> node_id,
  ) {
    return _flow_graph_remove_node(
      graph,
      node_id,
    );
  }

  late final _flow_graph_remove_nodePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(FlowGraphHandle,
              ffi.Pointer<ffi.Char>)>>('flow_graph_remove_node');
  late final _flow_graph_remove_node = _flow_graph_remove_nodePtr
      .asFunction<int Function(FlowGraphHandle, ffi.Pointer<ffi.Char>)>();

  FlowNodeHandle flow_graph_get_node(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> node_id,
  ) {
    return _flow_graph_get_node(
      graph,
      node_id,
    );
  }

  late final _flow_graph_get_nodePtr = _lookup<
      ffi.NativeFunction<
          FlowNodeHandle Function(
              FlowGraphHandle, ffi.Pointer<ffi.Char>)>>('flow_graph_get_node');
  late final _flow_graph_get_node = _flow_graph_get_nodePtr.asFunction<
      FlowNodeHandle Function(FlowGraphHandle, ffi.Pointer<ffi.Char>)>();

  int flow_graph_get_nodes(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Pointer<FlowNodeHandle>> nodes,
    ffi.Pointer<ffi.Size> count,
  ) {
    return _flow_graph_get_nodes(
      graph,
      nodes,
      count,
    );
  }

  late final _flow_graph_get_nodesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Pointer<FlowNodeHandle>>,
              ffi.Pointer<ffi.Size>)>>('flow_graph_get_nodes');
  late final _flow_graph_get_nodes = _flow_graph_get_nodesPtr.asFunction<
      int Function(FlowGraphHandle, ffi.Pointer<ffi.Pointer<FlowNodeHandle>>,
          ffi.Pointer<ffi.Size>)>();

  FlowConnectionHandle flow_graph_connect_nodes(
    FlowGraphHandle graph,
    ffi.Pointer<ffi.Char> source_id,
    ffi.Pointer<ffi.Char> source_port,
    ffi.Pointer<ffi.Char> target_id,
    ffi.Pointer<ffi.Char> target_port,
  ) {
    return _flow_graph_connect_nodes(
      graph,
      source_id,
      source_port,
      target_id,
      target_port,
    );
  }

  late final _flow_graph_connect_nodesPtr = _lookup<
      ffi.NativeFunction<
          FlowConnectionHandle Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('flow_graph_connect_nodes');
  late final _flow_graph_connect_nodes =
      _flow_graph_connect_nodesPtr.asFunction<
          FlowConnectionHandle Function(
              FlowGraphHandle,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();
